--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Soufi-ane.github.io/breaking-bad-quotes",
+  "homepage": ".",
   "name": "breaking-bad-quotes",
   "version": "0.1.0",
   "private": true,
