--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "yarn": "^1.22.21"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 192.168.1.17",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
